--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -4,8 +4,8 @@
   <h2>{{product.name}}</h2>
   <h2>{{product.price}}</h2>
   <h2>{{product.description}}</h2>
-  <p *ngIf="product.price<700">Course is available for Discount!</p>
-  <button *ngIf="product.quantity>0">Check Availability</button>
+  <!--Child Component Code-->
+  <app-alert-details [product]="product"></app-alert-details>
   <br>
 </div>
 
