--- a/src/app/alert-details/alert-details.component.html
+++ b/src/app/alert-details/alert-details.component.html
@@ -1,2 +1,4 @@
 <p *ngIf="product.price<700">Course is available for Discount!</p>
-<button *ngIf="product.quantity>0">Check Availability</button>
+<button
+  *ngIf="product.quantity>0"
+  (click)="checkAvailability()">Check Availability</button>
