Dealing with Custom Events spanning multiple Components

--- a/src/app/alert-details/alert-details.component.html
+++ b/src/app/alert-details/alert-details.component.html
@@ -1,4 +1,4 @@
 <p *ngIf="product.price<700">Course is available for Discount!</p>
 <button
   *ngIf="product.quantity>0"
-  (click)="checkAvailability()">Check Availability</button>
+  (click)="availButtonClicked()">Check Availability</button>
