Adding Bootstrap Styling to Angular Project

--- a/src/app/alert-details/alert-details.component.html
+++ b/src/app/alert-details/alert-details.component.html
@@ -36,6 +36,7 @@
 <!-- Template Variables to uniquely identify Templates -->
 <ng-template #template1>
   <button
+    class = "btn btn-outline-primary"
     [disabled]=isUnchanged
     (click)="availButtonClicked()">Check Availability</button>
 </ng-template>
