--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,3 +1,4 @@
+<!--
 <h1>{{title}}</h1>
 
 <button (click)="enaDisBuying()">Enable/Disable Buying</button>
@@ -6,7 +7,7 @@
   <h2>{{product.name}}</h2>
   <h2>{{product.price}}</h2>
   <h2>{{product.description}}</h2>
-  <!--Child Component Code-->
+  <--Child Component Code->
   <app-alert-details
     [product]="product"
     [isUnchanged] = isUnchanged
@@ -15,3 +16,40 @@
 </div>
 
 <h1>Under Development...</h1>
+-->
+<div class="container py-5">
+  <div class="row text-center text-white mb-5">
+      <div class="col-lg-7 mx-auto">
+          <h1 class="display-4">Product List</h1>
+      </div>
+  </div>
+
+  <button class = "btn btn-primary"(click)="enaDisBuying()">Enable/Disable Buying</button>
+
+  <div class="row">
+      <div class="col-lg-8 mx-auto">
+          <!-- List group-->
+          <ul class="list-group shadow">
+            <div *ngFor="let product of products">
+              <!-- list group item-->
+              <li class="list-group-item">
+                  <!-- Custom content-->
+                  <div class="media align-items-lg-center flex-column flex-lg-row p-3">
+                      <div class="media-body order-2 order-lg-1">
+                          <h5 class="mt-0 font-weight-bold mb-2">{{product.name}}</h5>
+                          <p class="font-italic text-muted mb-0 small">{{product.description}}</p>
+                          <div class="d-flex align-items-center justify-content-between mt-1">
+                              <h6 class="font-weight-bold my-2">{{product.price}}</h6>
+                          </div>
+                      </div><img src={{product.imgaddress}} alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
+                  </div> <!-- End -->
+                  <app-alert-details
+                    [product]="product"
+                    [isUnchanged] = isUnchanged
+                    (notify) = 'checkAvailability(product)'></app-alert-details>
+              </li> <!-- End -->
+            </div>
+          </ul> <!-- End -->
+      </div>
+  </div>
+</div>
